--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>IswibApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="assets/images/iswib-icon.png" />
 </head>
 <body>
   <app-root></app-root>
